--- a/css/components/common.css
+++ b/css/components/common.css
@@ -69,28 +69,21 @@
     top: 50%;
     padding: 0;
     margin: 0;
-    font-size: 0;
+    font-size: 50px;
     transform: translateY(-50%);
     background: transparent;
     border: none;
+    z-index: 5;
     color: #fff;
 }
 
-.slick-next,
-.slick-prev {
-    height: 30px;
-    width: 30px;
-    z-index: 5;
-}
-
 
 
 .slick-prev {
-    right: 15px;
+    left: 25px;
 }
 
 .slick-next {
-
-    left: 15px;
+    right: 25px;
 }
 
