Added and stylised social icons, updated icons font

--- a/css/components/common.css
+++ b/css/components/common.css
@@ -108,13 +108,12 @@ Clickable button in full height
 }
 
 .profile-cards .card .card-img .hover-box {
-    display: flex;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.4);
     opacity: 0;
     transition: opacity .3s;
 }
@@ -148,4 +147,34 @@ Clickable button in full height
 .profile-cards .card:hover .card-title h2,
 .profile-cards .card:hover .card-title p {
     color: white;
+}
+
+.profile-cards .card .card-img .hover-box .social-networks {
+    position: absolute;
+    list-style: none;
+    display: flex;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.profile-cards .card .card-img .hover-box .social-networks li {
+    margin: 0 2px;
+}
+
+
+.profile-cards .card .card-img .hover-box .social-networks li a {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    height: 50px;
+    width: 50px;
+    font-size: 24px;
+    background-color: #3a454d;
+}
+
+.profile-cards .card .card-img .hover-box .social-networks li a:hover {
+    background-color: #4e5a62;
 }
