--- a/css/components/fonts.css
+++ b/css/components/fonts.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'icomoon';
   src:
-    url('../../fonts/icomoon.ttf?644osw') format('truetype'),
-    url('../../fonts/icomoon.woff?644osw') format('woff'),
-    url('../../fonts/icomoon.svg?644osw#icomoon') format('svg');
+    url('../../fonts/icomoon.ttf?7lg1ji') format('truetype'),
+    url('../../fonts/icomoon.woff?7lg1ji') format('woff'),
+    url('../../fonts/icomoon.svg?7lg1ji#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -24,15 +24,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-linkedin:before {
+  content: "\e900";
+}
+.icon-facebook:before {
+  content: "\e901";
+}
+.icon-twitter:before {
+  content: "\e904";
+}
 .icon-Arrow-right:before {
   content: "\e902";
 }
 .icon-Arrow-left:before {
   content: "\e903";
-}
-.icon-arrow-stick-right:before {
-  content: "\e900";
-}
-.icon-arrow-stick-left:before {
-  content: "\e901";
 }
